--- a/SMB-Finhealth.html
+++ b/SMB-Finhealth.html
@@ -1,1 +1,245 @@
 
+<!DOCTYPE html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" id="main_css-css" href="https://jschintz.github.io/AccionMeasures/main.min.css" type="text/css" media="all">
+<style>
+body {
+  margin: 0;
+  font-size: 28px;
+  font-family: Georgia, Arial, Helvetica, sans-serif;
+	z-index:991;
+}
+	
+hr {
+	border: 2px dashed #C0C0C0"; 
+		color="#FFFFFF"; size="6";}
+h1 {
+    font-size:34px; 
+	font-family: Arial;
+	color: #ffffff;
+}
+h2 {
+font-size:26px; 
+font-family: Arial;
+color: #ffffff;	
+	}	
+h3 {
+    font-size:34px; 
+	font-family: Arial;
+	color: #5e514d;
+}
+h4 {
+font-size:18px; 
+font-family: Arial;
+color: #5e514d;	
+width: 75%;
+max-width: 400px;	
+	}		
+	
+AtD {
+      background-color: blue;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 75%;
+	max-width: 400px;	
+    }	
+	
+.header {
+  background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;
+	z-index:999;	
+}
+#navbar {
+  overflow: hidden;
+  background-color: #333;
+	font-family: Arial;	
+	z-index:999;
+}
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-family: Arial;	
+  font-size: 17px;
+	z-index:999;
+}
+#navbar a:hover {
+  background-color: #6bbbae;
+  color: black;
+	z-index:999;
+}
+#navbar a.active {
+  background-color: #6bbbae;
+  color: white;
+	z-index:999;
+}
+.content {
+  padding: 16px;
+	z-index:991;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+	z-index:999;
+}
+.sticky + .content {
+  padding-top: 60px;
+	z-index:999;
+}
+	
+resource-template-default.post-content a {color:#ffffff}
+.page-template-landing-exc .sub-nav nav a {
+	font-family: "Avenir Next LT W01 Demi";
+	letter-spacing: 0.02em;
+}
+/* IMPACT STUDY */
+@-webkit-keyframes pulse {
+	0% {
+		-webkit-box-shadow: 0 0 0 0 rgba(243,247,251, 1);
+	}
+	70% {
+      -webkit-box-shadow: 0 0 0 10px rgba(243,247,251, 0);
+  	}
+	100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(243,247,251, 0);
+  	}
+}
+@-moz-keyframes pulse {
+	0% {
+		-moz-box-shadow: 0 0 0 0 rgba(243,247,251, 1);
+	}
+	70% {
+      -moz-box-shadow: 0 0 0 10px rgba(243,247,251, 0);
+  	}
+	100% {
+      -moz-box-shadow: 0 0 0 0 rgba(243,247,251, 0);
+  	}
+}
+@-moz-keyframes pulse {
+	0% {
+		-o-box-shadow: 0 0 0 0 rgba(243,247,251, 1);
+	}
+	70% {
+      -o-box-shadow: 0 0 0 10px rgba(243,247,251, 0);
+  	}
+	100% {
+      -o-box-shadow: 0 0 0 0 rgba(243,247,251, 0);
+  	}
+}
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(243,247,251, 1);
+	-o-box-shadow: 0 0 0 0 rgba(243,247,251, 1);
+    box-shadow: 0 0 0 0 rgba(243,247,251, 1);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 10px rgba(243,247,251, 0);
+      box-shadow: 0 0 0 10px rgba(243,247,251, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(243,247,251, 0);
+      box-shadow: 0 0 0 0 rgba(243,247,251, 0);
+  }
+}
+.page-template-landing-exc .slider .goals-slider .slick-arrow:after, .page-template-landing-exc .slider .goals-slider .slick-arrow:before {
+	background-color: #37BFBF;
+	width: 25px;
+	height: 4px;
+}
+.page-template-landing-exc .slider .goals-slider .slick-arrow {
+	top: -67px;
+	border-radius: 100%;
+	animation: pulse 0.75s infinite;
+	-webkit-animation: pulse 0.75s infinite;
+	-o-animation: pulse 0.75s infinite;
+	-moz-animation: pulse 0.75s infinite;
+}
+.page-template-landing-exc .slider .goals-slider .slick-arrow.slick-next {
+	right: 0;
+}
+.page-template-landing-exc .slider .goals-slider .slick-arrow.slick-prev {
+	left: 0;
+}
+.page-template-landing-exc #participants .contain > header h2 p {
+	font-size: 20px;
+	font-family: "AvenirNextLTW01-Regular";
+}
+.page-template-landing-exc .whats-next .prioroties h2 {
+	font-weight: normal;
+}	
+</style>
+<header id="hero" style="background-image:url(&#39;https://jschintz.github.io/AccionMeasures/Accion-Measures.png&#39;)">
+<div class="contain _very-narrow">
+<h1>Measuring Accion</h1>
+<h2>A quarterly tracker, capturing volume of mission-based lending services to small businesses in the United States since 2013</h2>
+</div>
+</header>
+	
+</div>
+<div id="navbar">
+	<a href="https://measuringaccionintheus.github.io/SMB-Finhealth.html#at-a-glance" class="">Key Findings</a>
+	<a href="https://measuringaccionintheus.github.io/SMB-Finhealth.html#our-members" class="">What is financial health?</a>	
+	<a href="https://measuringaccionintheus.github.io/SMB-Finhealth.html#who-we-serve" class="">Financial health @ Accion</a>
+	<a href="https://measuringaccionintheus.github.io/SMB-Finhealth.html#portfolio-risk" class="">Explore the data</a>
+	<a href="https://measuringaccionintheus.github.io/SMB-Finhealth.html#about-the-data" class="">About the Data</a>
+</div>	
+</head>	
+	<div class="content">
+	<section class="success" id="at-a-glance" >
+		<div class='tableauPlaceholder' id='viz1554843841207' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;SM&#47;SMB-FinhealthAccion&#47;Keyfindings&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='SMB-FinhealthAccion&#47;Keyfindings' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;SM&#47;SMB-FinhealthAccion&#47;Keyfindings&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1554843841207');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='850px';vizElement.style.height='1910px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='850px';vizElement.style.height='1910px';} else { vizElement.style.minWidth='850px';vizElement.style.maxWidth='100%';vizElement.style.height='2100px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    </div>
+	</section>
+	<div class="hr"><hr /></div>
+	<section class="success" id="our-members">
+		<div class='tableauPlaceholder' id='viz1550587393999' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;PF&#47;PF767W8M7&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;PF767W8M7' /> <param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;PF&#47;PF767W8M7&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550587393999');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1100px';vizElement.style.height='827px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+		</div>
+	</section>
+	<div class="hr"><hr /></div>	
+
+	<section class="successs" id="who-we-serve">
+		<div class='tableauPlaceholder' id='viz1550587317304' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;LA&#47;LARQ12019&#47;Whoweserve&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='LARQ12019&#47;Whoweserve' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;LA&#47;LARQ12019&#47;Whoweserve&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550587317304');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else { vizElement.style.minWidth='1100px';vizElement.style.maxWidth='100%';vizElement.style.height='1973px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+		</div>
+	</section>
+	<div class="hr"><hr /></div>
+	<section class="success" id="portfolio-risk">
+		<div class='tableauPlaceholder' id='viz1550587438519' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;R2&#47;R25YRRW96&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;R25YRRW96' /> <param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;R2&#47;R25YRRW96&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550587438519');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else { vizElement.style.minWidth='1100px';vizElement.style.maxWidth='100%';vizElement.style.height='1973px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+		</div>
+	</section>
+	<div class="hr"><hr /></div>
+	<section class="success" id="most-recent-quarter">
+		<div class='tableauPlaceholder' id='viz1550612921045' style='position: relative'><noscript><a href='https:&#47;&#47;us.accion.org&#47;'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TJ&#47;TJP892YQ5&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;TJP892YQ5' /> <param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TJ&#47;TJP892YQ5&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1550612921045');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='827px';} else { vizElement.style.minWidth='1100px';vizElement.style.maxWidth='100%';vizElement.style.height='1973px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>	
+		</div>
+	</section>
+	<div class="hr"><hr /></div>
+	<section class="AtD" id="about-the-data">
+		<h3>About the Loan Activity Report</h3>
+		<p> </p>	
+		<h4>The Loan Activity Report tracks quarterly how Accion's loan portfolio of small business borrowers has changed over time.  Since 2013, the information measures how key performance indicators evolve, allowing for quick insight into our network of providers.  Through this content users can enjoy simple metrics that describe Accion's success and dig deeper into the content by selecting custom time-frames or hover over graphs to display additional details. </h4>
+		</section>
+	<div class="hr"><hr /></div>
+<script>
+window.onscroll = function() {myFunction()};
+var navbar = document.getElementById("navbar");
+var sticky = navbar.offsetTop;
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+	
+</script>
+</body>	
+		
+</html>
